# tessera

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_WORKFLOW.md  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  LICENSE  README.de.md  README.md  RELEASE_READINESS.md  ROADMAP.md  SECURITY.md  hacs.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
decisions/: 0001-welle-a-authority-routing-branch.md  0002-mvp-v1-scope.md  0003-process-calibration.md  0004-monitor-before-enforce.md  0005-by-group-v1-inert.md
docs/: DEV_E2E_PLAN.md  GUIDE.de.md  GUIDE.md  MAINTENANCE.md  QUALITY.md  SOAK_PLAN.md  charter.md  concept.md  requirements.md  spec-e3-design.md  spec-e3-enforce.md  spec-enforce.md  spec-phase0.md  spec-phase1-core.md
reports/: core-audit-2026-06-29.md  d10-cm5-auth-benchmark-2026-06-30.md  d5-gate-2026-06-29.md  docs-validation-2026-06-30.md  e1-gate-2026-06-29.md  e2-gate-2026-06-29.md  e25-d9-gate-review-2026-06-30.md  e3-design-gate-2026-06-30.md  e31-gate-review-2026-06-30.md  e32-gate-review-2026-06-30.md  e33-gate-review-2026-06-30.md  e34-gate-review-2026-06-30.md  e35-fix-regate-2026-06-30.md  e35-gate-review-2026-06-30.md  overnight-2026-06-29.md  product-audit-2026-06-30.md  product-audit-cleanup-2026-06-30.md  welle-b-gate-2026-06-29.md  welle-c-gate-2026-06-29.md  welle-e-gate-2026-06-29.md
spike/: d12-authentik-test-setup.md
tests/: test_auth_adapter.py  test_compiler.py  test_concurrency.py  test_config_flow.py  test_d5_verdicts.py  test_d9_gate.py  test_init.py  test_linter.py  test_mode_manager.py  test_monitor.py  (+7 more)
(+113 files in other folders)
